# comp-anim-2019

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
Data/Shaders/: mesh.frag  mesh.vert  quad.frag  quad.vert  simple.frag  simple.vert
src/: Camera.cpp  Camera.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VideoPlayer.cpp  VideoPlayer.h  Window.cpp  Window.h
src/utils/: File.h  Logger.h
